# update-notifier-qt

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  PKGBUILD  README.md  build.sh  mx-arch-updater.hook  mx-arch-updater.install  release.sh  update-notifier-qt.install  updater-settings
dbus/: org.mxlinux.UpdateNotifierSystemMonitor.conf  org.mxlinux.UpdateNotifierSystemMonitor.service  org.mxlinux.UpdateNotifierTrayIcon.service  org.mxlinux.UpdaterSettings.service  org.mxlinux.UpdaterSystemMonitor.conf  org.mxlinux.UpdaterSystemMonitor.service  org.mxlinux.UpdaterSystemTrayIcon.service
hooks/: update-notifier-refresh.hook
lib/mx-arch-updater/: updater_count  updater_list  updater_reload  updater_upgrade
libexec/mx-arch-updater/: common.py  updater_settings.py  updater_system_monitor.py  updater_systray.py  updater_view_and_upgrade.py
polkit/: org.mxlinux.mx-arch-updater.policy
src/: CMakeLists.txt  common.cpp  common.h  history_dialog.cpp  history_dialog.h  monitor_main.cpp  settings_dialog.cpp  settings_dialog.h  settings_main.cpp  settings_service.cpp  settings_service.h  system_monitor.cpp  system_monitor.h  systray_main.cpp  tray_app.cpp  tray_app.h  tray_service.cpp  tray_service.h  version.h.in  view_and_upgrade.cpp  view_and_upgrade.h  view_main.cpp
systemd/: 50-mx-arch-updater.preset  50-update-notifier.preset  mx-arch-updater-monitor.service  mx-arch-updater-tray.service  update-notifier-monitor.service  update-notifier-tray.service
